// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sellers getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": "2020-05-06T10:22:23.582Z",
    "requestId": "0",
    "timestamp": "2020-05-06T08:22:23.582Z",
  },
]
`;

exports[`sellers listMarketplaceParticipations returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "CreatedBefore": undefined,
    "LastUpdatedBefore": 2017-02-25T18:10:21.687Z,
    "NextToken": NextToken {
      "action": "ListOrders",
      "token": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
    },
    "Orders": Array [
      Object {
        "AmazonOrderId": "902-3159896-1390916",
        "BuyerCounty": undefined,
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com",
        "BuyerName": "Buyer name",
        "BuyerTaxInfo": Object {
          "CompanyLegalName": "Company Name",
          "TaxClassifications": Object {
            "TaxClassification": Object {
              "Name": "VATNumber",
              "Value": "XXX123",
            },
          },
          "TaxingRegion": "US",
        },
        "EarliestDeliveryDate": undefined,
        "EarliestShipDate": 2017-02-20T19:51:16.000Z,
        "EasyShipShipmentStatus": undefined,
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": true,
        "IsEstimatedShipDateSet": undefined,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "IsReplacementOrder": undefined,
        "IsSoldByAB": undefined,
        "LastUpdateDate": 2017-02-20T19:49:35.000Z,
        "LatestDeliveryDate": undefined,
        "LatestShipDate": 2017-02-25T19:49:35.000Z,
        "MarketplaceId": "ATVPDKIKX0DER",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 25,
          "CurrencyCode": "USD",
        },
        "OrderType": "StandardOrder",
        "PaymentExecutionDetail": undefined,
        "PaymentMethod": "Other",
        "PaymentMethodDetails": Object {
          "PaymentMethodDetail": "CreditCard",
        },
        "PromiseResponseDueDate": undefined,
        "PurchaseDate": 2017-02-20T19:49:35.000Z,
        "PurchaseOrderNumber": "PO12345678",
        "ReplacedOrderId": undefined,
        "SalesChannel": "Amazon.com",
        "SellerOrderId": undefined,
        "ShipServiceLevel": undefined,
        "ShipmentServiceLevelCategory": undefined,
        "ShippingAddress": Object {
          "AddressLine1": "1234 Any St.",
          "AddressLine2": undefined,
          "AddressLine3": undefined,
          "AddressType": "Commercial",
          "City": "Seattle",
          "Country": undefined,
          "CountryCode": "US",
          "District": undefined,
          "Municipality": undefined,
          "Name": "Buyer name",
          "Phone": undefined,
          "PostalCode": "98103",
          "StateOrRegion": undefined,
        },
      },
      Object {
        "AmazonOrderId": "483-3488972-0896720",
        "BuyerCounty": "Vila Olimpia",
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com.br",
        "BuyerName": "John Jones",
        "BuyerTaxInfo": Object {
          "CompanyLegalName": undefined,
          "TaxClassifications": Object {
            "TaxClassification": Object {
              "Name": "CSTNumber",
              "Value": "XXX123",
            },
          },
          "TaxingRegion": "BR",
        },
        "EarliestDeliveryDate": undefined,
        "EarliestShipDate": 2017-02-20T19:51:16.000Z,
        "EasyShipShipmentStatus": undefined,
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": false,
        "IsEstimatedShipDateSet": undefined,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "IsReplacementOrder": undefined,
        "IsSoldByAB": undefined,
        "LastUpdateDate": 2017-02-20T19:49:35.000Z,
        "LatestDeliveryDate": undefined,
        "LatestShipDate": 2017-02-25T19:49:35.000Z,
        "MarketplaceId": "A2Q3Y263D00KWC",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 100,
          "CurrencyCode": "BRL",
        },
        "OrderType": undefined,
        "PaymentExecutionDetail": undefined,
        "PaymentMethod": "Other",
        "PaymentMethodDetails": Object {
          "PaymentMethodDetail": "CreditCard",
        },
        "PromiseResponseDueDate": undefined,
        "PurchaseDate": 2017-02-20T19:49:35.000Z,
        "PurchaseOrderNumber": undefined,
        "ReplacedOrderId": undefined,
        "SalesChannel": undefined,
        "SellerOrderId": undefined,
        "ShipServiceLevel": undefined,
        "ShipmentServiceLevelCategory": undefined,
        "ShippingAddress": Object {
          "AddressLine1": "1234 Avenida Qualquer",
          "AddressLine2": undefined,
          "AddressLine3": undefined,
          "AddressType": "Residential",
          "City": "Sao Paulo",
          "Country": undefined,
          "CountryCode": "BR",
          "District": undefined,
          "Municipality": undefined,
          "Name": "Buyer name",
          "Phone": undefined,
          "PostalCode": "08474-130",
          "StateOrRegion": undefined,
        },
      },
      Object {
        "AmazonOrderId": "058-1233752-8214740",
        "BuyerCounty": undefined,
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.co.jp",
        "BuyerName": "Jane Smith",
        "BuyerTaxInfo": undefined,
        "EarliestDeliveryDate": undefined,
        "EarliestShipDate": undefined,
        "EasyShipShipmentStatus": undefined,
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": false,
        "IsEstimatedShipDateSet": true,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "IsReplacementOrder": undefined,
        "IsSoldByAB": undefined,
        "LastUpdateDate": 2017-02-07T12:43:16.000Z,
        "LatestDeliveryDate": undefined,
        "LatestShipDate": undefined,
        "MarketplaceId": "A1VC38T7YXB528",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 1507,
          "CurrencyCode": "JPY",
        },
        "OrderType": "SourcingOnDemandOrder",
        "PaymentExecutionDetail": Array [
          Object {
            "Payment": Object {
              "Amount": 10,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "PointsAccount",
          },
          Object {
            "Payment": Object {
              "Amount": 317,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "GC",
          },
          Object {
            "Payment": Object {
              "Amount": 1180,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "COD",
          },
        ],
        "PaymentMethod": "COD",
        "PaymentMethodDetails": Object {
          "PaymentMethodDetail": "COD",
        },
        "PromiseResponseDueDate": 2017-08-31T23:58:44.000Z,
        "PurchaseDate": 2017-02-05T00:06:07.000Z,
        "PurchaseOrderNumber": undefined,
        "ReplacedOrderId": undefined,
        "SalesChannel": undefined,
        "SellerOrderId": undefined,
        "ShipServiceLevel": "Std JP Kanto8",
        "ShipmentServiceLevelCategory": "Standard",
        "ShippingAddress": Object {
          "AddressLine1": "1-2-10 Akasaka",
          "AddressLine2": undefined,
          "AddressLine3": undefined,
          "AddressType": undefined,
          "City": "Tokyo",
          "Country": undefined,
          "CountryCode": "JP",
          "District": undefined,
          "Municipality": undefined,
          "Name": "Jane Smith",
          "Phone": undefined,
          "PostalCode": "107-0053",
          "StateOrRegion": undefined,
        },
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": "2020-04-06T10:22:23.582Z",
    "requestId": "0",
    "timestamp": "2020-05-06T09:22:23.582Z",
  },
]
`;

exports[`sellers listMarketplaceParticipationsByNextToken returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "CreatedBefore": undefined,
    "LastUpdatedBefore": 2017-02-25T18:10:21.687Z,
    "NextToken": NextToken {
      "action": "ListOrders",
      "token": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
    },
    "Orders": Array [],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": "2020-05-06T10:22:23.582Z",
    "requestId": "0",
    "timestamp": "2020-05-06T08:22:23.582Z",
  },
]
`;
